--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,14 @@
 @import "tailwindcss";
+
+@font-face {
+  font-family: "KaiseiOpti-Bold.ttf";
+  src: url("../src/fonts/KaiseiOpti-Bold.ttf") format("woff2");
+}
+
+.pop {
+  font-family: "KaiseiOpti-Bold.ttf", serif;
+}
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -34,25 +44,6 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
 }
 
 @media (prefers-color-scheme: light) {
